--- a/style.css
+++ b/style.css
@@ -1,16 +1,84 @@
-.popup-body{
-  width: 200px;
+.popup-body {
+  width: 256px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .flagged-sponsored-product {
-  border: 1px solid red;
-  box-shadow: 0px 0px 5px 0px red;
+  border: 1px solid rgb(255, 0, 0);
+  box-shadow: 0px 0px 5px 0px rgb(255, 0, 0);
+}
+
+.display-none-sponsored-product {
+  display: none !important;
 }
 
 .flagged-sponsored-product-label {
-  border: 1px solid red;
+  border: 1px solid rgb(255, 0, 0);
   border-radius: 5px;
   padding: 1px 4px;
   font-weight: bold !important;
   color: red !important;
+  display: none;
+}
+
+.sponsored-indicator-background-hidden {
+  background: none;
+  !important
+}
+
+.sponsored-indicator-background-visible {
+  background: fixed;
+  !important background-color: #FFCDD2;
+}
+
+.sponsored-indicator {
+  border: 1px solid rgb(255, 0, 0);
+  border-radius: 5px;
+  box-shadow: 0px 0px 1px 0px rgb(255, 0, 0);
+  border-color: rgb(255, 0, 0);
+  color: rgb(255, 0, 0);
+  margin: 8px 8px 16px 8px;
+  padding: 11px 23px;
+  padding-right: 23px;
+  padding-left: 23px;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+
+.sponsored-indicator:hover {
+  background-color: #FFCDD2;
+  /* light red */
+}
+
+.left-span,
+.right-span {
+  display: inline-block;
+  display: flex;
+  align-items: center;
+}
+
+.left-span {
+  float: left;
+}
+
+.right-span {
+  float: right;
+}
+
+.circle {
+  font-weight: bold;
+  border-radius: 50%;
+  width: 14px;
+  height: 14px;
+  padding: 2px;
+  background: #fff;
+  border: 3px solid #000;
+  color: #000;
+  text-align: center;
+  color: rgb(255, 0, 0);
+  font: 12px Arial, sans-serif;
 }
