--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
 .promoted-flagged-product {
-  border: 1px solid rgb(255, 81, 0);
-  box-shadow: 0px 0px 5px 0px rgb(255, 81, 0);
-  opacity: 0.75;
-}
-
-.promoted-flagged-product-label {
-  font-weight: bold !important;
-  color: red !important;
+  box-shadow: 0px 0px 5px 0px rgb(148, 0, 0);
+  opacity: 0.85;
 }
 
 .sponsored-flagged-product {
-  border: 1px solid rgb(255, 0, 0);
   box-shadow: 0px 0px 5px 0px rgb(255, 0, 0);
   opacity: 0.75;
 }
 
 .sponsored-flagged-product-label {
-  border: 1px solid rgb(255, 0, 0);
+  border-radius: 5px;
+  padding: 8px;
+  width: 100%;
+  background-color: #ffdbdf;
+  font-weight: bold !important;
+  color: red !important;
+}
+
+.sponsored-flagged-store {
   border-radius: 5px;
   padding: 1px 4px;
-  background-color: #ffdbdf;
   font-weight: bold !important;
   color: red !important;
 }
