--- a/style.css
+++ b/style.css
@@ -8,10 +8,23 @@
   opacity: 0.75;
 }
 
+.sponsored-flagged-shelf {
+  box-shadow: 0px 0px 5px 0px rgb(255, 0, 0);
+  opacity: 0.75;
+}
+
 .sponsored-flagged-product-label {
   border-radius: 5px;
   padding: 8px;
   width: 100%;
+  background-color: #ffdbdf;
+  font-weight: bold !important;
+  color: red !important;
+}
+
+.sponsored-flagged-shelf {
+  border-radius: 5px;
+  padding: 8px;
   background-color: #ffdbdf;
   font-weight: bold !important;
   color: red !important;
