--- a/css/flaggerToogle.css
+++ b/css/flaggerToogle.css
@@ -2,7 +2,7 @@
   border: 1px solid rgb(255, 0, 0);
   border-radius: 5px;
   border-color: rgb(255, 0, 0);
-  box-shadow: 0px 0px 1px 0px rgb(255, 0, 0);
+  box-shadow: inset 0px 0px 1px 0px rgb(255, 0, 0);
   background: transparent;
   color: rgb(255, 0, 0);
   margin: 8px 8px 16px 0px;
