--- a/css/productFlags.css
+++ b/css/productFlags.css
@@ -1,5 +1,6 @@
 .flagged-product {
-  box-shadow: 0px 0px 5px 0px rgb(255, 0, 0);
+  border-radius: 5px;
+  box-shadow: inset 0px 0px 5px 2px rgb(255, 0, 0);
   opacity: 0.75;
 }
 
