--- a/css/shelfFlags.css
+++ b/css/shelfFlags.css
@@ -1,9 +1,18 @@
 .flagged-shelf {
   border-radius: 5px;
-  padding: 8px;
+  padding: 8px 23px 8px;
   background-color: #ffdbdf;
   font-weight: bold !important;
   color: red !important;
-  box-shadow: 0px 0px 5px 0px rgb(255, 0, 0);
+  box-shadow: inset 0px 0px 5px 2px rgb(255, 0, 0);
   opacity: 0.75;
+}
+
+.flagged-shelf-label {
+  border-radius: 5px;
+  padding: 8px;
+  width: 100%;
+  background-color: #ffdbdf;
+  font-weight: bold !important;
+  color: red !important;
 }
