Add flagged toggle on product page

--- a/css/flaggerToogle.css
+++ b/css/flaggerToogle.css
@@ -1,7 +1,6 @@
 .flagger-toggle-list {
   border: 1px solid rgb(255, 0, 0);
   border-radius: 5px;
-  border-color: rgb(255, 0, 0);
   box-shadow: inset 0px 0px 1px 0px rgb(255, 0, 0);
   background: transparent;
   color: rgb(255, 0, 0);
@@ -13,22 +12,26 @@
   height: 100%;
 }
 
+.flagger-toggle-list:hover,
+.flagger-toggle-active {
+  background-color: #ffcdd2;
+}
+
+/*  */
+
 .flagger-toggle-product {
-  border: 1px solid rgb(255, 0, 0);
+  border: 0px solid rgb(255, 0, 0);
   border-radius: 5px;
-  border-color: rgb(255, 0, 0);
-  box-shadow: inset 0px 0px 1px 0px rgb(255, 0, 0);
   background: transparent;
   color: rgb(255, 0, 0);
-  margin: 0px 0px 0px 8px;
-  padding: 11px 23px 12px;
+  padding: 12px 40px 12px 0px !important;
   display: flex;
   align-items: center;
   gap: 4px;
   height: 100%;
 }
 
-.flagger-toggle:hover,
-.flagger-toggle-active {
-  background-color: #ffcdd2;
+.flagger-toggle-product:hover,
+.flagger-toggle-product-active {
+  color: rgb(255, 0, 0) !important;
 }
