--- a/css/shelfFlags.css
+++ b/css/shelfFlags.css
@@ -4,7 +4,7 @@
   background-color: #ffdbdf;
   font-weight: bold !important;
   color: red !important;
-  box-shadow: inset 0px 0px 5px 2px rgb(255, 0, 0);
+  /* box-shadow: inset 0px 0px 5px 2px rgb(255, 0, 0); */
   opacity: 0.75;
 }
 
