--- a/css/flaggerToogle.css
+++ b/css/flaggerToogle.css
@@ -9,7 +9,6 @@
   display: flex;
   align-items: center;
   gap: 4px;
-  height: 100%;
 }
 
 .flagger-toggle-list:hover,
@@ -17,18 +16,15 @@
   background-color: #ffcdd2;
 }
 
-/*  */
-
 .flagger-toggle-product {
   border: 0px solid rgb(255, 0, 0);
   border-radius: 5px;
   background: transparent;
   color: rgb(255, 0, 0);
-  padding: 12px 40px 12px 0px !important;
+  padding: 2px 6px 2px !important;
   display: flex;
   align-items: center;
   gap: 4px;
-  height: 100%;
 }
 
 .flagger-toggle-product:hover,
