--- a/css/productFlags.css
+++ b/css/productFlags.css
@@ -1,13 +1,13 @@
 .flagged-product {
   border-radius: 5px;
   box-shadow: inset 0px 0px 5px 2px rgb(255, 0, 0);
-  opacity: 0.75;
+  opacity: 0.90;
 }
 
 .flagged-product-image {
   border-radius: 5px;
   box-shadow: inset 0px 0px 5px 2px rgb(255, 0, 0);
-  opacity: 0.75;
+  opacity: 0.90;
 }
 
 .flagged-product-label {
@@ -23,6 +23,13 @@
 .flagged-product-store {
   border-radius: 5px;
   padding: 1px 4px;
+  font-weight: bold !important;
+  color: red !important;
+}
+
+.flagged-list-title {
+  margin-left: 80px;
+  padding: 8px;
   font-weight: bold !important;
   color: red !important;
 }
