Patch firefox graphics bug
As of v1.4, chrome would display a white background on the shelf, and a light red background only near the h4 element. On firefox, the entire shelf stayed red, but the arrow button transition background/gradient remained white and looked bad.

--- a/css/shelfFlags.css
+++ b/css/shelfFlags.css
@@ -1,7 +1,7 @@
 .flagged-shelf {
   border-radius: 5px;
   padding: 8px 23px 8px;
-  background-color: #ffdbdf;
+  background-color: #ffffff;
   font-weight: bold !important;
   color: red !important;
   /* box-shadow: inset 0px 0px 5px 2px rgb(255, 0, 0); */
@@ -16,3 +16,10 @@
   font-weight: bold !important;
   color: red !important;
 }
+
+/*
+.sku-pick-shelf ul::before.sku-pick-shelf ul::after {
+  background-color: #ffdbdf;
+  background: linear-gradient(to left, #ffdbdf 0%, #ffdbdf.33%, rgba(255,255,255,0) 100%);
+}
+*/
