--- a/css/productFlags.css
+++ b/css/productFlags.css
@@ -33,3 +33,31 @@
   font-weight: bold !important;
   color: red !important;
 }
+
+.flagged-product .add-to-cart-inner {
+  position: relative;
+  z-index: 1;
+}
+
+.flagged-product .add-to-cart-inner::before,
+.flagged-product .add-to-cart-inner::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+}
+
+.flagged-product .add-to-cart-inner::before {
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  /* box-shadow: inset 0px 0px 5px 2px rgb(255, 0, 0); */
+}
+
+.flagged-product .add-to-cart-inner::after {
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  /* box-shadow: inset 0px 0px 5px 2px rgb(255, 0, 0); */
+}
