--- a/css/flaggerToggle.css
+++ b/css/flaggerToggle.css
@@ -1,11 +1,10 @@
 .flagger-toggle-list {
-  border: 1px solid rgb(255, 0, 0);
+  border: 1px solid #bbb; !important;
   border-radius: 5px;
-  box-shadow: inset 0px 0px 1px 0px rgb(255, 0, 0);
   background: transparent;
-  color: rgb(255, 0, 0);
-  margin: 8px 8px 16px 0px;
-  padding: 12px 23px 12px;
+  color: #707070;
+  margin: 8px 0px 16px 8px;
+  padding: 11px 23px;
   display: flex;
   align-items: center;
   gap: 4px;
@@ -14,6 +13,9 @@
 .flagger-toggle-list:hover,
 .flagger-toggle-active {
   background-color: #ffcdd2;
+  color: rgb(255, 0, 0);
+  /* box-shadow: inset 0px 0px 1px 0px rgb(255, 0, 0) !important; */
+  border: 1px solid rgb(255, 0, 0) !important;
 }
 
 .flagger-toggle-product {
