--- a/css/frequentlyBoughtTogetherFlags.css
+++ b/css/frequentlyBoughtTogetherFlags.css
@@ -4,7 +4,7 @@
   background-color: #ffdbdf !important;
   font-weight: bold !important;
   color: red !important;
-  /* box-shadow: inset 0px 0px 5px 2px rgb(255, 0, 0); */
+  /* box-shadow: inset 0px 0px 5px 2px rgb(255, 0, 0) !important; */
   /* opacity: 0.90 !important; */
 }
 
