--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,7 +33,7 @@
   /* width: 100% !important; */
   background-color: #fff5db !important;
   font-weight: bold !important;
-  color: rgb(246, 135, 0) !important;
+  color: #f68b24 !important;
 }
 
 .warning-label svg,
