--- a/src/css/productFlags.css
+++ b/src/css/productFlags.css
@@ -3,12 +3,12 @@
 .selected-product-cards {
   padding: 10px;
   border-radius: 5px !important;
-  box-shadow: 0px 0px 5px 2px rgb(255, 0, 0) !important;
+  box-shadow: 0px 0px 5px 2px #ff0000 !important;
 }
 
 .flagged-product-image {
   border-radius: 5px !important;
-  box-shadow: inset 0px 0px 5px 2px rgb(255, 0, 0) !important;
+  box-shadow: inset 0px 0px 5px 2px #ff0000 !important;
 }
 
 .flagged-product-store {
