--- a/src/css/shelfFlags.css
+++ b/src/css/shelfFlags.css
@@ -4,5 +4,5 @@
   background-color: #ffffff !important;
   font-weight: bold !important;
   color: red !important;
-  box-shadow: 0px 0px 5px 2px rgb(255, 0, 0) !important;
+  box-shadow: 0px 0px 5px 2px #ff0000 !important;
 }
