--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,7 +32,6 @@
 
 .align-end {
   text-align: end !important;
-  /* font-style: italic !important; */
 }
 
 text-black {
@@ -46,8 +45,9 @@ text-black {
 .sponsored-label,
 .flagged-list-title,
 .label-text {
-  border-radius: 5px !important;
-  padding: 2px 6px 2px !important;
+  border-radius: 2px !important;
+  padding: 8px 12px !important;
+
   background-color: #ffdbdf !important;
   font-weight: bold !important;
   color: red !important;
@@ -60,21 +60,21 @@ text-black {
 }
 
 .info-label-positive {
-  border: 1px solid var(--color-text-success-default) !important; /* Updated to use variable */
+  border: 1px solid var(--color-text-success-default) !important;
   line-height: 1.4 !important;
   font-size: 16px !important;
   font-weight: 500 !important;
-  background-color: var(--color-background-success-weak) !important; /* Updated to use variable */
-  color: var(--color-text-success-default) !important; /* Updated to use variable */
+  background-color: var(--color-background-success-weak) !important;
+  color: var(--color-text-success-default) !important;
 }
 
 .info-label-negative {
-  border: 1px solid var(--custom-light-red, #ff0000) !important; /* Existing implementation */
+  border: 1px solid var(--custom-light-red, #ff0000) !important;
   line-height: 1.4 !important;
   font-size: 16px !important;
   font-weight: 500 !important;
-  background-color: var(--color-background-accent-weak) !important; /* Matches existing color */
-  color: var(--color-text-accent-default) !important; /* Matches existing color */
+  background-color: var(--color-background-accent-weak) !important;
+  color: var(--color-text-accent-default) !important;
 }
 
 .sponsored-label svg,
