--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,6 +1,6 @@
 .popup-body {
   font-family: 'Roboto', sans-serif;
-  width: 250px;
+  height: 100%;
   padding: 15px;
   background-color: #f7f7f7;
   color: #333;
@@ -72,6 +72,7 @@
 .label-section {
   display: flex;
   align-items: center;
+  vertical-align: middle;
   justify-content: start;
   margin-bottom: 20px;
 }
