Update CSS and manifest files

--- a/src/css/flaggerToggle.css
+++ b/src/css/flaggerToggle.css
@@ -3,7 +3,7 @@
   align-items: center !important;
   justify-content: center !important;
   margin: 8px 0px 16px 8px !important;
-  padding: 11px 23px !important;
+  padding: 11px 8px !important;
   border: 1px solid #bbbbbb !important;
   border-radius: 5px !important;
   background: transparent !important;
@@ -11,16 +11,17 @@
   white-space: nowrap !important;
 }
 
-
 .flagger-toggle-product {
-  margin: 8px 16px 16px 0px !important;
-  padding: 9px 17px !important;
   display: flex !important;
   align-items: center !important;
+  justify-content: center !important;
+  margin: 8px 0px 16px 8px !important;
+  padding: 11px 8px !important;
   border: 1px solid #bbbbbb !important;
   border-radius: 5px !important;
   background: transparent !important;
   color: #707070 !important;
+  white-space: nowrap !important;
 }
 
 .flagger-toggle-list svg,
