--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,7 +53,7 @@ text-black {
   color: red !important;
 }
 
-.bts-outline {
+.price-checker-outline {
   border: 1px solid var(--color-border-neutral-default) !important;
   border-radius: 16px !important;
   padding: 20px 24px !important;
